# auto-coder

./: .env.example  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  <MagicMock name='stdout' id='123677655608272'>  <MagicMock name='stdout' id='126081713449936'>  <MagicMock name='stdout' id='126630110267344'>  <MagicMock name='stdout' id='127054553254224'>  <MagicMock name='stdout' id='129688887037136'>  <MagicMock name='stdout' id='129938766922384'>  <MagicMock name='stdout' id='130370673290192'>  <MagicMock name='stdout' id='135217558950608'>  <MagicMock name='stdout' id='135291289578448'>  <MagicMock name='stdout' id='135534678883344'>  <MagicMock name='stdout' id='136090331431184'>  <MagicMock name='stdout' id='138260168806352'>  <MagicMock name='stdout' id='139975521446864'>  <MagicMock name='stdout' id='140557431729104'>  ACCESS_GUIDE.md  AGENTS.md  BACKWARD_COMPATIBILITY_IMPLEMENTATION.md  BREAKING_CHANGES.md  CHANGELOG.md  FIX_SUMMARY_PR_50.md  GLOBAL_BACKEND_MANAGER_USAGE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_231.md  IMPLEMENTATION_SUMMARY_233.md  IMPLEMENTATION_SUMMARY_41.md  MANIFEST.in  MCP_PDB_SETUP.md  MIGRATION_909.md  MIGRATION_GUIDE.md  MIGRATION_GUIDE_v1.0.0.md  Makefile  OPENROUTER_SETUP.md  PARENT_ISSUE_COMPLETION.md  PROGRESS_DECORATORS_README.md  PROXY_FIX_DOCUMENTATION.md  (+88 more)
.Jules/: palette.md
.autocoder-dev/: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  run.sh  setup.sh
.devcontainer/: docker-compose.github-mcp.yml
.gemini/: settings.json
.github/: pr_body
.github/workflows/: ci.yml  migrate-branches.yml  pr-tests.yml  type-check.yml.disabled  update-version.yml
.jules/: bolt.md  palette.md  sentinel.md
.qwen/: settings.json
docs/: BUNDLED_MCP_SERVER.md  CHANGELOG_Label_Unification.md  CHANGELOG_backend_type.md  CHANGELOG_pr_data_required.md  DASHBOARD.md  LABEL_MANAGER.md  LLM_BACKEND_MANAGER_INITIALIZATION_FIX.md  MIGRATION_CLI_OPTIONS.md  MIGRATION_GUIDE_v2025.11.26.md  MIGRATION_GUIDE_v2026.2.0.md  MIGRATION_v2026.1.0.0.md  Qwen_Configuration_Guide.md  client-features.ja.yaml  client-features.yaml  configuration_guide.md  developer-graphrag-isolation.md  graphrag-migration-guide.md  graphrag-repository-isolation.md  llm_backend_config.example.toml  process_issues_activity.md  process_issues_activity.puml  qwen-credentials-options.md  user-guide-graphrag.md  webhook-daemon.md
examples/: label-config.json  label_manager_example.py  llm_config_with_fallback.toml  minimal-config.env  python-project-config.json  typescript-project-config.json
graph-builder/: package.json
graph-builder/src/: __init__.py  cli.ts  cli_python.py  normalizer.ts  types.ts
graph-builder/test-output/: rels.csv
mcp-inspector-config/: README.md  SETUP_COMPLETE.md  mcp-servers.json
mcp/graphrag_mcp/: main.py  server.py
reports/: feature_suggestions_test_repo_20250810_182417.json  jules_automation_report_test_repo_20250810_182336.json
rm/: Dockerfile  docker-compose.yml  requirements.txt  vulture_whitelist.py
rm/scripts/: cleanup_dead_functions.py
script/: test.sh
scripts/: check_graphrag_services.py  debug_workflow_dispatch.py  fetch_real_log.py  setup.sh  test.sh  type_check.sh  update_version.py  verify_artifact_download.py  verify_dependabot_pr_1099.py
scripts/process_issues_watcher/: process_issues_watcher.py  pyproject.toml
scripts/test-scripts/: simple_mcp_test.py  test_cli_integration.py  test_closed_item.py  test_fix_validation.py  test_github_actions_check.py  test_github_actions_history_fallback.py  test_global_backend_managers.py  test_graphrag_mcp.py  test_mcp_communication.py  test_only_watcher.py  (+4 more)
src/auto_coder/graph_builder/: README.md  jest.config.js  package-lock.json  package.json  pyproject.toml
src/auto_coder/graph_builder/sample-repo/python/: sample.py
src/auto_coder/graph_builder/src/: __init__.py  cli.ts  cli_python.py
src/auto_coder/graph_builder/src/emitter/: __init__.py  csv.ts  python_emitter.py
src/auto_coder/graph_builder/src/scanner/: __init__.py  python_scanner.py
src/auto_coder/graph_builder/src/tests/: javascript-scanner.test.ts  scanner.test.ts  test_python_monorepo.py  test_python_scanner.py
src/auto_coder/graph_builder/src/utils/: cyclomatic.ts  tokenEstimator.ts
src/auto_coder/graph_builder/test-output/: batch-2025-10-21T13-06-20-120490.json  nodes.csv
src/auto_coder/graph_builder/test-output-ts/: graph-data.json  nodes.csv  rels.csv
src/auto_coder/mcp_servers/test_watcher/: README.md  __init__.py  main.py  pyproject.toml  run_server.sh  server.py  test_watcher_tool.py
tests/: __init__.py  conftest.py  test_actions_history_branch_filtering.py  test_actions_history_pr_event_number_filtering.py  test_actions_history_pr_pullrequests_missing.py  test_actions_history_run_list_event_filter.py  test_actions_log_cli_e2e.py  test_actions_log_prelude_strip.py  test_apply_workspace_test_fix_switch.py  test_attempt_manager.py  test_auggie_client_daily_limit.py  test_automation_config.py  test_automation_engine.py  test_automation_engine_candidates.py  test_automation_engine_complete.py  test_automation_engine_final.py  test_automation_engine_fixed.py  test_automation_engine_label_integration.py  test_automation_engine_simple.py  test_automation_engine_working.py  test_backend_cli_options_integration.py  test_backend_config_update.py  test_backend_fallback.py  test_backend_manager.py  test_backend_provider_manager.py  test_backend_session_manager.py  test_backend_session_manager_permissions.py  test_backend_state_manager.py  test_backend_state_manager_security.py  test_backend_state_security.py  test_backend_switching.py  test_breaking_change_labels.py  test_check_backend_prerequisites.py  test_check_graphrag_services.py  test_ci_workflow.py  test_claude_client.py  test_cli.py  test_cli_auggie.py  test_cli_auggie_usage_limit_e2e.py  test_cli_auto_update_e2e.py  (+231 more)
utils/clone-issue/: README.md  pyproject.toml
utils/clone-issue/src/clone_issue/: cli.py
utils/gh-sub-issue/: EXAMPLES.md  README.md  pyproject.toml
utils/gh-sub-issue/tests/: test_cli.py
(+147 files in other folders)
