[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-coder"
version = "2025.11.6+g4acdbba"
description = "Automated application development using Gemini CLI and GitHub integration"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Auto-Coder Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "pygithub>=1.59.0",
    "pyyaml>=6.0",
    "GitPython>=3.1.0",
    "loguru>=0.7.0",
    "neo4j>=5.14.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "watchdog>=6.0.0",
    "pathspec>=0.12.0",
    "playwright>=1.54.0",
    "mcp-server>=0.1.4",
    "build>=1.3.0",
]

[dependency-groups]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
dev = [
    "black>=24.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=4.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[tool.setuptools]
# Package discovery configuration
packages = ["auto_coder", "auto_coder.util"]
package-dir = {"" = "src"}

# Entry points for CLI commands
[project.scripts]
auto-coder = "auto_coder.cli:main"

# Include package data files
[tool.setuptools.package-data]
auto_coder = ["prompts.yaml", "*.yml", "*.yaml"]

[tool.pyright]
# Python version
pythonVersion = "3.11"

# Basic checking
strictParameterNoneValue = true
reportGeneralTypeIssues = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIndexedValue = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true

# Report issues (設定して警告レベルに変更)
reportUnknownParameterType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportMissingTypeStubs = "warning"
reportPossiblyUnboundVariable = "warning"

# Import analysis
reportImportCycles = "warning"
reportUnusedImport = "warning"
reportDuplicateImport = "warning"

# Code quality
reportUnusedVariable = "warning"
reportPrivateUsage = "warning"
reportConstantRedefinition = "warning"

# Type annotations
reportTypedDictNotRequiredAccess = "warning"
reportPrivateImportUsage = "warning"

# Advanced checking
strictListInference = true
strictDictInference = true
strictSetInference = true

# Exclude specific files from checking if needed
exclude = [
    "tests/",
    "build/",
    "dist/",
]

[tool.black]
line-length = 300
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | graph_builder
)/
'''

[tool.isort]
profile = "black"
line_length = 300
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]
skip_glob = [
    "*/mcp_servers/*",
    "*/graph_builder/*",
    "*/build/*",
    "*/dist/*",
]
