[project]
name = "test-watcher-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for continuous test monitoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "watchdog>=6.0.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["test_watcher"]

